# walle_the_cleaner

./: .gitignore  CMakeLists.txt  README.md
res/blender_files/: Wheel.blend
res/blender_files/lower_arm_left/: lower_arm_left.mtl
res/blender_files/upper_arm/: upper_arm.mtl
res/blender_files/walle_complete/: WallE.blend  WallE.blend1  WallE.mtl
res/blender_files/wheel/: wheel.mtl
src/: main.cpp
src/api/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.h  animation.h  api.h  orientation.h  position.h  vertex.h
src/events/: KeyInput.h
src/handler/: CameraHandler.cpp  CameraHandler.h  RoboterHandler.cpp  RoboterHandler.h  robotHandler.h
src/model/: Handler.cpp  Handler.h  Scene.cpp  Scene.h
src/model/animation/: Action.h  Callback.cpp  Callback.h  Rotate.cpp  Rotate.h  Translate.cpp  Translate.h  Visibility.cpp  Visibility.h
src/scenes/robot/: Arm.cpp  Arm.h  Body.cpp  Body.h  Carriage.cpp  Carriage.h  Eye.cpp  Eye.h  Finger.cpp  Finger.h  Neck.cpp  Neck.h  Robot.cpp  Robot.h  Wheel.cpp  Wheel.h
src/scenes/robot/arm/: Finger.cpp  Finger.h  LowerArm.cpp  LowerArm.h  UpperArm.cpp  UpperArm.h
src/scenes/sky/: Sky.cpp  Sky.h  Sun.cpp  Sun.h  Wall.cpp  Wall.h
src/scenes/surface/: Ground.cpp  Ground.h  Surface.cpp  Surface.h  TrashCube.cpp  TrashCube.h  Wall.cpp  Wall.h
src/utilities/: AnimationExecutor.cpp  AnimationExecutor.h  HandlerManager.h  Parameters.h  Renderer.h  SceneGraph.h  test.blend
